--- a/index.html
+++ b/index.html
@@ -1125,24 +1125,39 @@
 
                   <div class="resume-widget">
                      <div class="resume-item wow fadeInLeft" data-wow-delay=".4s">
-                        <div class="time">2022 - Present</div>
-                        <h3 class="resume-title">Lead Developer</h3>
-                        <div class="institute">Blockdots, London</div>
+                        <div class="time">Dec 2023 - Present</div>
+                        <h3 class="resume-title">Community Manager</h3>
+                        <div class="institute">Aipreneur, Bangalore</div>
                      </div>
                      <div class="resume-item wow fadeInLeft" data-wow-delay=".5s">
-                        <div class="time">2021 - 2022</div>
-                        <h3 class="resume-title">Full Stack Web Developer</h3>
-                        <div class="institute">Parsons, The New School</div>
+                        <div class="time">Sep 2022 - Present</div>
+                        <h3 class="resume-title">Co-Founder</h3>
+                        <div class="institute">Wildpalms Hospitality, Goa</div>
                      </div>
                      <div class="resume-item wow fadeInLeft" data-wow-delay=".6s">
-                        <div class="time">2020 - 2021</div>
-                        <h3 class="resume-title">UI Designer</h3>
-                        <div class="institute">House of Life, Leeds</div>
+                        <div class="time">Sep 2022 - Present</div>
+                        <h3 class="resume-title">Co-Founder</h3>
+                        <div class="institute">Crackerjack, Goa</div>
                      </div>
                      <div class="resume-item wow fadeInLeft" data-wow-delay=".7s">
-                        <div class="time">2018 - 2020</div>
-                        <h3 class="resume-title">Junior Graphics Designer</h3>
-                        <div class="institute">Theme Junction, Bursa</div>
+                        <div class="time">Aug 2021 - Jul 2022</div>
+                        <h3 class="resume-title">Business Analyst</h3>
+                        <div class="institute">Create Protocol</div>
+                     </div>
+                     <div class="resume-item wow fadeInLeft" data-wow-delay=".7s">
+                        <div class="time">Jul 2021 - Aug 2021</div>
+                        <h3 class="resume-title">Design Intern</h3>
+                        <div class="institute">Doctodo</div>
+                     </div>
+                     <div class="resume-item wow fadeInLeft" data-wow-delay=".7s">
+                        <div class="time">Jun 2021 - Jul 2021</div>
+                        <h3 class="resume-title">Design System Intern</h3>
+                        <div class="institute">Tata Hitachi</div>
+                     </div>
+                     <div class="resume-item wow fadeInLeft" data-wow-delay=".7s">
+                        <div class="time">Jan 2020 - Jun 2021</div>
+                        <h3 class="resume-title">Business Development Intern</h3>
+                        <div class="institute">Upride Networks PVT LTD</div>
                      </div>
                   </div>
                </div>
@@ -1154,25 +1169,21 @@
 
                   <div class="resume-widget">
                      <div class="resume-item wow fadeInRight" data-wow-delay=".5s">
-                        <div class="time">2020 - 2023</div>
-                        <h3 class="resume-title">Programming course</h3>
-                        <div class="institute">Harverd University</div>
+                        <div class="time">2018 - 2022</div>
+                        <h3 class="resume-title">B.E in ECE</h3>
+                        <div class="institute">RV College of Engineering, Bangalore</div>
                      </div>
                      <div class="resume-item wow fadeInRight" data-wow-delay=".6s">
-                        <div class="time">2016 - 2020</div>
-                        <h3 class="resume-title">Graphic design course</h3>
-                        <div class="institute">University of Denmark</div>
+                        <div class="time">2016 - 2018</div>
+                        <h3 class="resume-title">XII-CBSE</h3>
+                        <div class="institute">Sri Chaitanya PU College, Bangalore</div>
                      </div>
                      <div class="resume-item wow fadeInRight" data-wow-delay=".7s">
-                        <div class="time">2012 - 2015</div>
-                        <h3 class="resume-title">Web design course</h3>
-                        <div class="institute">University of California</div>
+                        <div class="time">2009 - 2016</div>
+                        <h3 class="resume-title">X-ICSE</h3>
+                        <div class="institute">Hill top School, Jamshedpur</div>
                      </div>
-                     <div class="resume-item wow fadeInRight" data-wow-delay=".8s">
-                        <div class="time">2010 - 2011</div>
-                        <h3 class="resume-title">Design & Technology</h3>
-                        <div class="institute">Parsons, The New School</div>
-                     </div>
+                     
                   </div>
                </div>
             </div>
@@ -1210,38 +1221,38 @@
                      <div class="skill-item wow fadeInUp" data-wow-delay=".4s">
                         <div class="skill-inner">
                            <div class="icon-box">
-                              <img src="assets/img/icons/sketch.svg" alt="" />
+                              <img src="assets/img/icons/canva-icon.svg" alt="" />
                            </div>
                            <div class="number">80%</div>
                         </div>
-                        <p>Sketch</p>
+                        <p>Canva</p>
                      </div>
                      <div class="skill-item wow fadeInUp" data-wow-delay=".5s">
                         <div class="skill-inner">
                            <div class="icon-box">
-                              <img src="assets/img/icons/xd.svg" alt="" />
+                              <img src="assets/img/icons/adobe-illustrator-icon.svg" alt="" />
                            </div>
                            <div class="number">85%</div>
                         </div>
-                        <p>XD</p>
+                        <p>Illustrator</p>
                      </div>
                      <div class="skill-item wow fadeInUp" data-wow-delay=".6s">
                         <div class="skill-inner">
                            <div class="icon-box">
-                              <img src="assets/img/icons/wp.svg" alt="" />
+                              <img src="assets/img/icons/html-5-svgrepo-com.svg" alt="" />
                            </div>
                            <div class="number">99%</div>
                         </div>
-                        <p>WordPess</p>
+                        <p>HTML</p>
                      </div>
                      <div class="skill-item wow fadeInUp" data-wow-delay=".7s">
                         <div class="skill-inner">
                            <div class="icon-box">
-                              <img src="assets/img/icons/react.svg" alt="" />
+                              <img src="assets/img/icons/css-3-svgrepo-com.svg" alt="" />
                            </div>
                            <div class="number">89%</div>
                         </div>
-                        <p>React</p>
+                        <p>CSS</p>
                      </div>
                      <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
                         <div class="skill-inner">
@@ -1251,6 +1262,69 @@
                            <div class="number">93%</div>
                         </div>
                         <p>JavaScript</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/Bravo.png" alt="" />
+                           </div>
+                           <div class="number">95%</div>
+                        </div>
+                        <p>Bravo Studio</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/c-program-icon.svg" alt="" />
+                           </div>
+                           <div class="number">78%</div>
+                        </div>
+                        <p>Embedded C</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/python-svgrepo-com.svg" alt="" />
+                           </div>
+                           <div class="number">55%</div>
+                        </div>
+                        <p>Python</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/OpenCV-01.svg" alt="" />
+                           </div>
+                           <div class="number">42%</div>
+                        </div>
+                        <p>Open CV</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/google-firebase-icon.svg" alt="" />
+                           </div>
+                           <div class="number">55%</div>
+                        </div>
+                        <p>Firebase</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/xano.png" alt="" />
+                           </div>
+                           <div class="number">65%</div>
+                        </div>
+                        <p>Xano</p>
+                     </div>
+                     <div class="skill-item wow fadeInUp" data-wow-delay=".8s">
+                        <div class="skill-inner">
+                           <div class="icon-box">
+                              <img src="assets/img/icons/airtable-svgrepo-com.svg" alt="" />
+                           </div>
+                           <div class="number">70%</div>
+                        </div>
+                        <p>Airtable</p>
                      </div>
                   </div>
                </div>
@@ -1686,7 +1760,7 @@
                            </div>
                            <div class="text-box">
                               <p>Phone</p>
-                              <a href="tel:0123456789">+01 123 654 8096</a>
+                              <a href="tel:8757850115">+91 8757850115</a>
                            </div>
                         </li>
                         <li class="d-flex flex-wrap align-items-center position-relative wow fadeInRight"
@@ -1696,7 +1770,7 @@
                            </div>
                            <div class="text-box">
                               <p>Email</p>
-                              <a href="mailto:mail@mail.com">gerolddesign@mail.com</a>
+                              <a href="mailto:mail@mail.com">nikhil191199@gmail.com</a>
                            </div>
                         </li>
                         <li class="d-flex flex-wrap align-items-center position-relative wow fadeInRight"
@@ -1706,7 +1780,7 @@
                            </div>
                            <div class="text-box">
                               <p>Address</p>
-                              <a href="#">Warne Park Street Pine, <br />FL 33157, New York</a>
+                              <a href="#">Bangalore, India</a>
                            </div>
                         </li>
                      </ul>
@@ -1764,7 +1838,7 @@
          <div class="row">
             <div class="col-md-12 text-center">
                <div class="footer-logo-box">
-                  <a href="#"><img src="assets/img/logo/logo.png" alt="" /></a>
+                  <a href="#"><img src="assets/img/logo/ngGlogo.png" alt="" /></a>
                </div>
                <div class="footer-menu">
                   <nav>
@@ -1779,7 +1853,7 @@
                   </nav>
                </div>
                <div class="copy-text">
-                  <p>&copy; 2024 All rights reserved by <a href="#" target="_blank">ThemeJunction</a></p>
+                  <p>&copy; 2024 All rights reserved by <a href="#" target="_blank">Nikhil Gupta</a></p>
                </div>
             </div>
          </div>
