--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
                         <button data-filter="*" class="active">All</button>
                         <button data-filter=".uxui">UX/UI</button>
                         <button data-filter=".branding">Branding</button>
-                        <button data-filter=".mobile-app">Apps</button>
+                        <button data-filter=".web-app">Web-apps</button>
                         <div class="active-bg"></div>
                      </div>
                   </div>
@@ -935,22 +935,22 @@
                      </div>
                      <div class="portfolio-item uxui">
                         <div class="image-box">
-                           <img src="assets/img/portfolio/1.jpg" alt="" />
+                           <img src="assets/img/portfolio/UI-UX-design.png" alt="" />
                         </div>
                         <div class="content-box">
-                           <h3 class="portfolio-title">New Age</h3>
-                           <p>Project was about precision and information.</p>
+                           <h3 class="portfolio-title">Evento</h3>
+                           <p>Event booking app</p>
                            <i class="flaticon-up-right-arrow"></i>
                            <button data-mfp-src="#portfolio-wrapper" class="portfolio-link modal-popup"></button>
                         </div>
                      </div>
-                     <div class="portfolio-item mobile-app">
+                     <div class="portfolio-item web-app">
                         <div class="image-box">
-                           <img src="assets/img/portfolio/3.jpg" alt="" />
+                           <img src="assets/img/portfolio/real estate.png" alt="wildpalms" />
                         </div>
                         <div class="content-box">
-                           <h3 class="portfolio-title">Sebastian</h3>
-                           <p>Project was about precision and information.</p>
+                           <h3 class="portfolio-title">Wildpalms Hospitality Website</h3>
+                           <p>Its a Real-Estate listing and booking website</p>
                            <i class="flaticon-up-right-arrow"></i>
                            <button data-mfp-src="#portfolio-wrapper" class="portfolio-link modal-popup"></button>
                         </div>
@@ -1741,7 +1741,7 @@
                               </div>
                               <div class="col-12">
                                  <div class="form_btn">
-                                    <button type="submit" class="btn tj-btn-primary">Send Message</button>
+                                    <button type="submit" class="btn tj-btn-primary" onclick="contact-form.php">Send Message</button>
                                  </div>
                               </div>
                            </div>
