--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,7 @@
       <!-- END: Contact Form Fail Modal Message End -->
    </main>
 
-   <!-- FOOTER AREA START -->
+   <!-- FOOTER AREA START asdf -->
    <footer class="tj-footer-area">
       <div class="container">
          <div class="row">
