--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
    <meta name="description" content="" />
 
    <!-- Site Title -->
-   <title>Blog - Gerold - Personal Portfolio HTML5 Template</title>
+   <title>Nikhil Gupta - Blogs</title>
 
    <!-- Place favicon.ico in the root directory -->
    <link rel="apple-touch-icon" href="./assets/img/favicon.png" />
@@ -72,7 +72,7 @@
 
                <div class="header-info-list d-none d-md-inline-block">
                   <ul class="ul-reset">
-                     <li><a href="mailto:mail@gerolddesign.com">mail@gerolddesign.com</a></li>
+                     <li><a href="mailto:mail@gerolddesign.com">Nikhil Gupta</a></li>
                   </ul>
                </div>
 
@@ -90,7 +90,7 @@
                </div>
 
                <div class="header-button">
-                  <a href="#" class="btn tj-btn-primary">Hire me!</a>
+                  <a href="#contact-section" class="btn tj-btn-primary">Hire me!</a>
                </div>
 
                <div class="menu-bar d-lg-none">
@@ -111,13 +111,13 @@
             <div class="col-12 d-flex flex-wrap align-items-center">
                <div class="logo-box">
                   <a href="index.html">
-                     <img src="assets/img/logo/logo.png" alt="" />
+                     <img src="assets/img/logo/ngGlogo.png" alt="" />
                   </a>
                </div>
 
                <div class="header-info-list d-none d-md-inline-block">
                   <ul class="ul-reset">
-                     <li><a href="mailto:mail@gerolddesign.com">mail@gerolddesign.com</a></li>
+                     <li><a href="mailto:mail@gerolddesign.com">Nikhil Gupta</a></li>
                   </ul>
                </div>
 
@@ -457,7 +457,7 @@
          <div class="row">
             <div class="col-md-12 text-center">
                <div class="footer-logo-box">
-                  <a href="#"><img src="assets/img/logo/logo.png" alt="" /></a>
+                  <a href="#"><img src="assets/img/logo/ngGlogo.png" alt="" /></a>
                </div>
                <div class="footer-menu">
                   <nav>
@@ -472,7 +472,7 @@
                   </nav>
                </div>
                <div class="copy-text">
-                  <p>&copy; 2024 All rights reserved by <a href="#" target="_blank">ThemeJunction</a></p>
+                  <p>&copy; 2024 All rights reserved by <a href="#" target="_blank">nikhil Gupta</a></p>
                </div>
             </div>
          </div>
