added few files
made few changes and added few files

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
    <link rel="stylesheet" href="assets/css/main.css" />
    <link rel="stylesheet" href="assets/css/light-mode.css" />
    <link rel="stylesheet" href="assets/css/responsive.css" />
+   
 </head>
 
 <body>
@@ -428,21 +429,22 @@
                               <h3 class="title">Get in Touch</h3>
                            </div>
 
-                           <form action="index.html">
+                           <form method="post" action="https://script.google.com/macros/s/AKfycbzgLpXcUd4ecEW3fMFQxktnKW-QOUJcXCquZQgBKBwV1xWui8AWGi5DgGxE_O4yMJH0cg/exec" name="contact-form">
                               <div class="form_group">
                                  <input type="text" name="name" id="name" placeholder="Name" autocomplete="off" />
                               </div>
                               <div class="form_group">
-                                 <input type="email" name="semail" id="semail" placeholder="Email" autocomplete="off" />
+                                 <input type="email" name="email" id="semail" placeholder="Email" autocomplete="off" />
                               </div>
                               <div class="form_group">
-                                 <textarea name="smessage" id="smessage" placeholder="Your message"
+                                 <textarea name="message" id="smessage" placeholder="Your message"
                                     autocomplete="off"></textarea>
                               </div>
                               <div class="form_btn">
                                  <button class="btn tj-btn-primary" type="submit">Send Message</button>
                               </div>
                            </form>
+                           <script src="assets/js/googlesheet.js"></script>
                         </div>
                      </div>
                   </div>
@@ -566,21 +568,22 @@
                            <h3 class="title">Get in Touch</h3>
                         </div>
 
-                        <form action="index.html">
+                        <form method="post" action="https://script.google.com/macros/s/AKfycbzgLpXcUd4ecEW3fMFQxktnKW-QOUJcXCquZQgBKBwV1xWui8AWGi5DgGxE_O4yMJH0cg/exec" name="contact-form">
                            <div class="form_group">
                               <input type="text" name="name" id="name" placeholder="Name" autocomplete="off" />
                            </div>
                            <div class="form_group">
-                              <input type="email" name="semail" id="semail" placeholder="Email" autocomplete="off" />
+                              <input type="email" name="email" id="semail" placeholder="Email" autocomplete="off" />
                            </div>
                            <div class="form_group">
-                              <textarea name="smessage" id="smessage" placeholder="Your message"
+                              <textarea name="message" id="smessage" placeholder="Your message"
                                  autocomplete="off"></textarea>
                            </div>
                            <div class="form_btn">
                               <button class="btn tj-btn-primary" type="submit">Send Message</button>
                            </div>
                         </form>
+                        <script src="assets/js/googlesheet.js"></script>
                      </div>
                   </div>
                </div>
@@ -710,21 +713,22 @@
                            <h3 class="title">Get in Touch</h3>
                         </div>
 
-                        <form action="index.html">
+                        <form method="post" action="https://script.google.com/macros/s/AKfycbzgLpXcUd4ecEW3fMFQxktnKW-QOUJcXCquZQgBKBwV1xWui8AWGi5DgGxE_O4yMJH0cg/exec" name="contact-form">
                            <div class="form_group">
                               <input type="text" name="name" id="name" placeholder="Name" autocomplete="off" />
                            </div>
                            <div class="form_group">
-                              <input type="email" name="semail" id="semail" placeholder="Email" autocomplete="off" />
+                              <input type="email" name="email" id="semail" placeholder="Email" autocomplete="off" />
                            </div>
                            <div class="form_group">
-                              <textarea name="smessage" id="smessage" placeholder="Your message"
+                              <textarea name="message" id="smessage" placeholder="Your message"
                                  autocomplete="off"></textarea>
                            </div>
                            <div class="form_btn">
                               <button class="btn tj-btn-primary" type="submit">Send Message</button>
                            </div>
                         </form>
+                        <script src="assets/js/googlesheet.js"></script>
                      </div>
                   </div>
                </div>
@@ -867,21 +871,22 @@
                            <h3 class="title">Get in Touch</h3>
                         </div>
 
-                        <form action="index.html">
+                        <form method="post" action="https://script.google.com/macros/s/AKfycbzgLpXcUd4ecEW3fMFQxktnKW-QOUJcXCquZQgBKBwV1xWui8AWGi5DgGxE_O4yMJH0cg/exec" name="contact-form">
                            <div class="form_group">
                               <input type="text" name="name" id="name" placeholder="Name" autocomplete="off" />
                            </div>
                            <div class="form_group">
-                              <input type="email" name="semail" id="semail" placeholder="Email" autocomplete="off" />
+                              <input type="email" name="email" id="semail" placeholder="Email" autocomplete="off" />
                            </div>
                            <div class="form_group">
-                              <textarea name="smessage" id="smessage" placeholder="Your message"
+                              <textarea name="message" id="smessage" placeholder="Your message"
                                  autocomplete="off"></textarea>
                            </div>
                            <div class="form_btn">
                               <button class="btn tj-btn-primary" type="submit">Send Message</button>
                            </div>
                         </form>
+                        <script src="assets/js/googlesheet.js"></script>
                      </div>
                   </div>
                </div>
@@ -924,13 +929,15 @@
                      <div class="gutter-sizer"></div>
                      <div class="portfolio-item branding">
                         <div class="image-box">
-                           <img src="assets/img/portfolio/2.jpg" alt="" />
+                           <img src="assets/img/portfolio/pitchdeck.png" alt="" />
                         </div>
                         <div class="content-box">
-                           <h3 class="portfolio-title">Deloitte</h3>
+                           <h3 class="portfolio-title">Pitch decks</h3>
                            <p>Project was about precision and information.</p>
                            <i class="flaticon-up-right-arrow"></i>
-                           <button data-mfp-src="#portfolio-wrapper" class="portfolio-link modal-popup"></button>
+                           <a href="https://dribbble.com/shots/22716936-Pitch-Decks" target="_blank">
+                              <button class="portfolio-link"></button>
+                          </a>
                         </div>
                      </div>
                      <div class="portfolio-item uxui">
@@ -955,13 +962,13 @@
                            <button data-mfp-src="#portfolio-wrapper" class="portfolio-link modal-popup"></button>
                         </div>
                      </div>
-                     <div class="portfolio-item branding">
+                     <div class="portfolio-item web-app">
                         <div class="image-box">
-                           <img src="assets/img/portfolio/4.jpg" alt="" />
+                           <img src="assets/img/portfolio/webapp1.png" alt="" />
                         </div>
                         <div class="content-box">
-                           <h3 class="portfolio-title">Mochnix</h3>
-                           <p>Project was about precision and information.</p>
+                           <h3 class="portfolio-title">JBL Website</h3>
+                           <p>This was a passion project</p>
                            <i class="flaticon-up-right-arrow"></i>
                            <button data-mfp-src="#portfolio-wrapper" class="portfolio-link modal-popup"></button>
                         </div>
@@ -1169,6 +1176,11 @@
 
                   <div class="resume-widget">
                      <div class="resume-item wow fadeInRight" data-wow-delay=".5s">
+                        <div class="time">2025 - 2026</div>
+                        <h3 class="resume-title">MBA International</h3>
+                        <div class="institute">Deakin University, Melbourne</div>
+                     </div>
+                     <div class="resume-item wow fadeInRight" data-wow-delay=".5s">
                         <div class="time">2018 - 2022</div>
                         <h3 class="resume-title">B.E in ECE</h3>
                         <div class="institute">RV College of Engineering, Bangalore</div>
@@ -1186,6 +1198,8 @@
                      
                   </div>
                </div>
+
+               
             </div>
          </div>
       </section>
@@ -1350,10 +1364,10 @@
                         <div class="testimonial-item">
                            <div class="top-area d-flex flex-wrap justify-content-between">
                               <div class="logo-box">
-                                 <img src="assets/img/testimonials/logo/1.png" alt="" />
+                                 <img src="assets/img/testimonials/logo/upride.png" alt="" />
                               </div>
                               <div class="image-box">
-                                 <img src="assets/img/testimonials/user/1.jpg" alt="" />
+                                 <img src="assets/img/testimonials/user/utkarsh-verma.jpeg" alt="" />
                               </div>
                            </div>
                            <div class="icon-box">
@@ -1384,18 +1398,17 @@
                                  </defs>
                               </svg>
                            </div>
-                           <p class="quote">“Taylor is a professional Designer he really helps my business by providing
-                              value to my business.</p>
-                           <h4 class="name">Brandon Fraser</h4>
-                           <span class="designation">Senior Software Dev, Cosmic Sport</span>
+                           <p class="quote">“I hired Nikhil for a web development projec, and I couldn't be happier with the results. His attention to detail, coding expertise, and prompt communication made the entire process smooth and enjoyable. I highly recommend Nikhil for any web development needs.</p>
+                           <h4 class="name">Utkarsh Verma</h4>
+                           <span class="designation">Founder, Upride Networks</span>
                         </div>
                         <div class="testimonial-item">
                            <div class="top-area d-flex flex-wrap justify-content-between">
                               <div class="logo-box">
-                                 <img src="assets/img/testimonials/logo/2.png" alt="" />
+                                 <img src="assets/img/testimonials/logo/Tcrackerjack.png" alt="" />
                               </div>
                               <div class="image-box">
-                                 <img src="assets/img/testimonials/user/2.jpg" alt="" />
+                                 <img src="assets/img/testimonials/user/ashish.png" alt="" />
                               </div>
                            </div>
                            <div class="icon-box">
@@ -1426,10 +1439,9 @@
                                  </defs>
                               </svg>
                            </div>
-                           <p class="quote">“Taylor is a professional Designer he really helps my business by providing
-                              value to my business.</p>
-                           <h4 class="name">Tim Bailey</h4>
-                           <span class="designation">SEO Specialist, Theme Junction</span>
+                           <p class="quote">“Working with Nikhil on the user interface and experience design of our mobile app was a breeze. They listened to our ideas, offered valuable insights, and created an intuitive and visually appealing design. The positive user feedback we've received is a testament to their talent.</p>
+                           <h4 class="name">Ashish Thakwani</h4>
+                           <span class="designation">Founder, Crackerjack</span>
                         </div>
                         <div class="testimonial-item">
                            <div class="top-area d-flex flex-wrap justify-content-between">
@@ -1626,9 +1638,9 @@
                   <div class="blog-item wow fadeInUp" data-wow-delay=".5s">
                      <div class="blog-thumb">
                         <a href="blog-details.html">
-                           <img src="assets/img/blog/1.jpg" alt="" />
+                           <img src="assets/img/blog/b1.webp" alt="" />
                         </a>
-                        <a href="#" class="category">Tutorial</a>
+                        <a href="#" class="category">Sci-fi</a>
                      </div>
 
                      <div class="blog-content">
@@ -1638,7 +1650,7 @@
                               <li><i class="fa-light fa-comments"></i> <a href="#">Comment (0)</a></li>
                            </ul>
                         </div>
-                        <h3 class="blog-title"><a href="blog-details.html">top 10 ui ux designers</a></h3>
+                        <h3 class="blog-title"><a href="blog-details.html">The Story of how Earth was Destroyed and Survivors Moved to Mars</a></h3>
                      </div>
                   </div>
                </div>
@@ -1646,9 +1658,9 @@
                   <div class="blog-item wow fadeInUp" data-wow-delay=".6s">
                      <div class="blog-thumb">
                         <a href="blog-details.html">
-                           <img src="assets/img/blog/2.jpg" alt="" />
+                           <img src="assets/img/blog/b32.png" alt="" />
                         </a>
-                        <a href="#" class="category">TIPS</a>
+                        <a href="#" class="category">Freelancing</a>
                      </div>
                      <div class="blog-content">
                         <div class="blog-meta">
@@ -1657,7 +1669,7 @@
                               <li><i class="fa-light fa-comments"></i> <a href="#">Comment (0)</a></li>
                            </ul>
                         </div>
-                        <h3 class="blog-title"><a href="blog-details.html">App Development Guides</a></h3>
+                        <h3 class="blog-title"><a href="blog-details.html">Unlocking the Art of Freelancing: Turning Your Passion into Profit</a></h3>
                      </div>
                   </div>
                </div>
@@ -1665,9 +1677,9 @@
                   <div class="blog-item wow fadeInUp" data-wow-delay=".7s">
                      <div class="blog-thumb">
                         <a href="blog-details.html">
-                           <img src="assets/img/blog/3.jpg" alt="" />
+                           <img src="assets/img/blog/b21.jpg" alt="" />
                         </a>
-                        <a href="#" class="category">FREEBIES</a>
+                        <a href="#" class="category">Graphic Designing</a>
                      </div>
                      <div class="blog-content">
                         <div class="blog-meta">
@@ -1676,7 +1688,7 @@
                               <li><i class="fa-light fa-comments"></i> <a href="#">Comment (0)</a></li>
                            </ul>
                         </div>
-                        <h3 class="blog-title"><a href="blog-details.html">learn graphic design free</a></h3>
+                        <h3 class="blog-title"><a href="blog-details.html">Cashing in on Creativity: 10 Brilliant Ways to Make Money as a Graphic Designer in 2023</a></h3>
                      </div>
                   </div>
                </div>
