made few changes

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         connect billions of people
                      </p>
                      <div class="button-box d-flex flex-wrap align-items-center">
-                        <a href="assets/Nikhil Gupta resume.pdf"  target="_blank"  class="btn tj-btn-secondary">Download CV <i class="flaticon-download"></i></a>
+                        <a href="Nikhil Gupta resume/index.html"  target="_blank"  class="btn tj-btn-secondary">Open CV <i class="flaticon-download"></i></a>
                         <ul class="ul-reset social-icons">
                            <li>
                               <a href="https://x.com/nikhil191199" target="_blank"><i class="fa-brands fa-twitter"></i></a>
@@ -1709,35 +1709,35 @@
                      </div>
 
                      <div class="tj-contact-form">
-                        <form id="contact-form">
+                        <form method="post" action="https://script.google.com/macros/s/AKfycbzaN66loTLse6asbbPnTzh3ShzrS5FAcexC2Qhszx8TZihP1UoQuc-4VohZP5zal3wJqg/exec" name="contact-form1">
                            <div class="row gx-3">
                               <div class="col-sm-6">
                                  <div class="form_group">
-                                    <input type="text" name="conName" id="conName" placeholder="First name"
+                                    <input type="text" name="Name" id="Name" placeholder="First name"
                                        autocomplete="off" />
                                  </div>
                               </div>
                               <div class="col-sm-6">
                                  <div class="form_group">
-                                    <input type="text" name="conLName" id="conLName" placeholder="Last name"
+                                    <input type="text" name="Name" id="LName" placeholder="Last name"
                                        autocomplete="off" />
                                  </div>
                               </div>
                               <div class="col-sm-6">
                                  <div class="form_group">
-                                    <input type="email" name="conEmail" id="conEmail" placeholder="Email address"
+                                    <input type="email" name="Email" id="Email" placeholder="Email address"
                                        autocomplete="off" />
                                  </div>
                               </div>
                               <div class="col-sm-6">
                                  <div class="form_group">
-                                    <input type="tel" name="conPhone" id="conPhone" placeholder="Phone number"
+                                    <input type="tel" name="Phone" id="Phone" placeholder="Phone number"
                                        autocomplete="off" />
                                  </div>
                               </div>
                               <div class="col-12">
                                  <div class="form_group">
-                                    <select name="conService" id="conService" class="tj-nice-select">
+                                    <select name="Service" id="Service" class="tj-nice-select">
                                        <option value="" selected disabled>Choose Service</option>
                                        <option value="braning">Branding Design</option>
                                        <option value="web">Web Design & Development</option>
@@ -1748,7 +1748,7 @@
                               </div>
                               <div class="col-12">
                                  <div class="form_group">
-                                    <textarea name="conMessage" id="conMessage" placeholder="Message"></textarea>
+                                    <textarea name="Message" id="Message" placeholder="Message"></textarea>
                                  </div>
                               </div>
                               <div class="col-12">
@@ -1758,6 +1758,7 @@
                               </div>
                            </div>
                         </form>
+                        <script src="assets/js/googlesheet2.js"></script>
                      </div>
                   </div>
                </div>
