--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                      <h1 class="hero-title">Web Developer +<br />UI/UX Designer</h1>
 
                      <div class="hero-image-box d-md-none text-center">
-                        <img src="assets/img/hero/hero12.png" alt="" />
+                        <img src="assets/img/hero/nik12.jpg" alt="" />
                      </div>
 
                      <p class="lead">
@@ -199,7 +199,7 @@
                </div>
                <div class="col-md-6 d-none d-md-block">
                   <div class="hero-image-box text-center">
-                     <img src="assets/img/hero/hero12.png" alt="" />
+                     <img src="assets/img/hero/nik12.jpg" alt="" />
                   </div>
                </div>
             </div>
