updated my website

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         <li><a href="#skills-section">Skills</a></li>
                         <li><a href="#testimonials-section">Testimonials</a></li>
                         <li><a href="#contact-section">Contact</a></li>
+                        <li><a href="goodnews.html">Dashboard</a></li>
                      </ul>
                   </nav>
                </div>
@@ -189,7 +190,7 @@
                               <a href="https://github.com/SkyNik1999" target="_blank"><i class="fa-brands fa-github"></i></a>
                            </li>
                            <li>
-                              <a href="https://www.instagram.com/nikhilgupta.eth/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                              <a href="https://www.instagram.com/nikhilgupta.au/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                            </li>
 
                            
